--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./vendor/owl/css/owl.css">
     <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/fontawesome.css">
     <link rel="stylesheet" href="vendor/jquery-ui/jquery-ui.css"> -->
-    <link rel="stylesheet" href="./dist/css/style.min.css">
+    <link rel="stylesheet" href="./css/style.min.css">
     <!-- <link rel="stylesheet" href="./src/css/style.css"> -->
     <title>WebStore - Loja especializada</title>
 </head>
